# Food-recommendation-by-graph

./: README.md  index.html  index.ts  index2.html  index2.ts
data/: 1000_cleaned_data.csv  100_cleaned_data.csv  200_cleaned_data.csv  500_cleaned_data.csv  Final_data_1000.csv  Final_data_200.csv  Final_data_500.csv  cleaning.py  crawling_data.py  filtered_100.csv  filtered_500.csv
food_crawl/: 11.csv  Dockerfile  docker-compose.yml  foods.json  pyproject.toml  test_data.csv
food_crawl/food_crawl/: items.py  middlewares.py  pipelines.py  settings.py
food_crawl/food_crawl/spiders/: crawl.py
graph/: final_100.gexf  final_1007.gexf  final_200.gexf  final_507.gexf
public/: final_1007.gexf  final_1007_test.gexf  test4.gexf
src/: App.tsx  NodeDetail.tsx  RecipeDetail.tsx  main.tsx
