[tool.poetry]
name = "food-crawl"
version = "0.1.0"
description = ""
authors = ["fd"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.26.1"
pandas = "^2.2.3"
requests = "^2.32.3"
scrapy = "^2.11.2"
chromedriver-autoinstaller = "^0.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
